--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   </head>
 <body>
   
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+        
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -369,6 +371,8 @@
       </div>
       <table class="table mt-4 ">
         <button type="submit" class="btn btn-primary mt-2 m-5">Submit Form</button>
+        
+    </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 </body>
